src/objects/IEC_ZuoraPricing2SAP_Filter__c.object
<CustomObject>
    <description>Filters to query Salesforce products to send Zuora pricing to SAP</description>
    <fields>
        <fullName>Exclude_SAP_Material_Number__c</fullName>
        <description>List of SAP material number of products to exclude from interface.  Should be in format &apos;mat1&apos;,&apos;mat2&apos;,...</description>
        <label>Exclude SAP Material Number</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAP_Division_Code__c</fullName>
        <description>SAP code of division to include products in interface</description>
        <label>SAP Division Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Sales_Channel_Code__c</fullName>
        <description>SAP code of sales channel to include products in interface</description>
        <label>SAP Sales Channel Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ZuoraPricing2SAP Product Filter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SAP_Sales_Channel_Code__c</columns>
        <columns>SAP_Division_Code__c</columns>
        <columns>Exclude_SAP_Material_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>IEC ZuoraPricing2SAP Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZuoraPricing2SAP Product Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>